--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Cabin+Sketch&display=swap" rel="stylesheet">
-    <link href= "development /CSS/index.css" rel="stylesheet">
+    <link href= "css/index.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/975fc712d3.js"></script>
     <title>Water My Planets About</title>
 </head>
