--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Cabin+Sketch&display=swap" rel="stylesheet">
-    <link href= "/development /CSS/index.css" rel="stylesheet">
+    <link href= "css/index.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/975fc712d3.js"></script>
     <title>Water My Planets</title>
 </head>
 <body>
-    
+    <div class="nav-container">
+        <h1><i class="fab fa-pied-piper-pp"></i> Planet Planners</i></h1>
+        <nav class="flexer">
+            <div class="kids"><a href="index.html"><i class="fas fa-home"></i></a></div>
+            <div class="kids"><a href=""><i class="fas fa-phone"></i></a></div>
+            <div class="kids"><a href=""><i class="fas fa-envelope"></i></a></div>
+            <div class="kids"><a href=""><i class="fas fa-user"></i></i></a></div>
+            <div class="kids"><a href="about.html"><i class="fas fa-id-badge"></i></a></div>     
+        </nav>
+    </div>
+    <div class="saying">
+        <div class="qoute">
+            <div>"Like people, plants respond to extra attention."</div>
+            <div class="center">-Arash Haji-Hassanzadeh</div>
+        </div>
+    </div>
 </body>
 </html>
