got the mission lorem para up

--- a/about.html
+++ b/about.html
@@ -10,6 +10,21 @@
     <title>Water My Planets About</title>
 </head>
 <body>
-    
+    <div class="nav-container">
+        <h1><i class="fab fa-pied-piper-pp"></i> Planet Planners</i></h1>
+        <nav class="flexer">
+            <div class="kids"><a href="index.html"><i class="fas fa-home"></i></a></div>
+            <div class="kids"><a href=""><i class="fas fa-phone"></i></a></div>
+            <div class="kids"><a href=""><i class="fas fa-envelope"></i></a></div>
+            <div class="kids"><a href=""><i class="fas fa-user"></i></i></a></div>  
+            <div class="kids"><a href="about.html"><i class="fas fa-id-badge"></i></i></i></a></div>   
+        </nav>
+    </div>
+    <div class='blanket'>
+        <div class='mission'>
+            <h1>Our Mission</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil in exercitationem, rerum nemo sint corporis amet, doloremque laborum, sit accusamus quisquam nisi natus. Laudantium ab commodi, ducimus officiis non qui reprehenderit cumque natus praesentium, necessitatibus animi in consequuntur! Nulla debitis possimus recusandae libero et quisquam fugiat rem eius quaerat? Accusantium illo ipsa, qui, aperiam, aliquam ipsam itaque architecto eveniet rerum modi pariatur iste sequi maxime sed. Possimus quod culpa illo? Animi earum itaque non quis, minus minima quisquam doloremque culpa, harum eum quas excepturi repellat? Minus quisquam, omnis quas veniam distinctio nulla dicta magnam tempora architecto, nam quaerat totam dolores!</p>
+        </div>  
+    </div>  
 </body>
 </html>
