--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="kids"><a href=""><i class="fas fa-phone"></i></a></div>
             <div class="kids"><a href=""><i class="fas fa-envelope"></i></a></div>
             <div class="kids"><a href=""><i class="fas fa-user"></i></i></a></div>  
-            <div class="kids"><a href=""><i class="fas fa-id-badge"></i></i></i></a></div>   
+            <div class="kids"><a href="about.html"><i class="fas fa-id-badge"></i></i></i></a></div>   
         </nav>
     </div>
     <div class="saying">
