started the second page

--- a/about.html
+++ b/about.html
@@ -25,6 +25,104 @@
             <h1>Our Mission</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil in exercitationem, rerum nemo sint corporis amet, doloremque laborum, sit accusamus quisquam nisi natus. Laudantium ab commodi, ducimus officiis non qui reprehenderit cumque natus praesentium, necessitatibus animi in consequuntur! Nulla debitis possimus recusandae libero et quisquam fugiat rem eius quaerat? Accusantium illo ipsa, qui, aperiam, aliquam ipsam itaque architecto eveniet rerum modi pariatur iste sequi maxime sed. Possimus quod culpa illo? Animi earum itaque non quis, minus minima quisquam doloremque culpa, harum eum quas excepturi repellat? Minus quisquam, omnis quas veniam distinctio nulla dicta magnam tempora architecto, nam quaerat totam dolores!</p>
         </div>  
+        <div class="container">
+            <div class="box box1"><img class="circle"  src="Images/Matthew-w.png">
+            </div>
+            <div class="box box2">
+                <h2>Name Here</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="box box4">
+                <h2>Name Here</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="box box3"><img class="circle"  src="Images/Jesus.png">
+            </div>
+            <div class="box box5"><img class="circle"  src="Images/Arash.png">
+            </div>
+            <div class="box box6">
+                <h2>Name Here</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="box box8">
+                <h2>Name Here</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="box box7"><img class="circle"  src="Images/Tim.png">
+            </div>
+            <div class="box box9"><img class="circle"  src="Images/rachel.png">
+            </div>
+            <div class="box box10">
+                <h2>Name Here</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="box box12">
+                <h2>Name Here</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="box box11"><img class="circle" src="Images/welsey.png">
+            </div>
+            <div class="box box13"><img class="circle"  src="Images/dylan.png">
+            </div>
+            <div class="box box14">
+                <h2>Name Here</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="box box16"><h2>Name Here</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="box box15"><img class="circle"  src="Images/Screen Shot 2020-02-03 at 6.22.44 PM.png">
+            </div>
+        </div>
     </div>  
+
 </body>
 </html>
