finished for the night

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin|Cabin+Sketch&display=swap" rel="stylesheet">
     <link href= "css/index.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/975fc712d3.js"></script>
-    <title>Water My Planets</title>
+    <title>Planet Planners</title>
 </head>
 <body>
     <div class="nav-container">
@@ -25,6 +25,9 @@
             <div>"Like people, plants respond to extra attention."</div>
             <div class="center">-Arash Haji-Hassanzadeh</div>
         </div>
+    </div>
+    <div>
+        <div class="copy">Copyright (c) 2020 Build-Week-Water-My-Plants-2</div>
     </div>
 </body>
 </html>
