--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin|Cabin+Sketch&display=swap" rel="stylesheet">
     <link href= "css/index.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/975fc712d3.js"></script>
-    <title>Water My Planets About</title>
+    <title>Planet Planners About</title>
 </head>
-<body>
+<body class="about-page">
     <div class="nav-container">
         <h1><i class="fab fa-pied-piper-pp"></i> Planet Planners</i></h1>
         <nav class="flexer">
@@ -29,100 +29,95 @@
             <div class="box box1"><img class="circle"  src="Images/Matthew-w.png">
             </div>
             <div class="box box2">
-                <h2>Name Here</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <h2>Matthew Weidner</h2>
+                <ul class="list">
+                    <li>Full Stack Web Developer</li>
+                    <li>Github Username: </li>
+                    <li>Contributions: Back-end</li>
                 </ul>
+                <div class="button"><a href="">View More Work</a></div>
             </div>
             <div class="box box4">
-                <h2>Name Here</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <h2>Jesus Morales</h2>
+                <ul class="list">
+                    <li>Full Stack Web Developer</li>
+                    <li>Github Username: </li>
+                    <li>Contributions: Back-end</li>
                 </ul>
+                <div class="button"><a href="">View More Work</a></div>
             </div>
             <div class="box box3"><img class="circle"  src="Images/Jesus.png">
             </div>
             <div class="box box5"><img class="circle"  src="Images/Arash.png">
             </div>
             <div class="box box6">
-                <h2>Name Here</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <h2>Arash Haji-Hassanzadeh</h2>
+                <ul class="list">
+                    <li>Full Stack Web Developer</li>
+                    <li>Github Username: </li>
+                    <li>Contributions: React 2</li>
                 </ul>
+                <div class="button"><a href="">View More Work</a></div>
             </div>
             <div class="box box8">
-                <h2>Name Here</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <h2>Timothy Gilliam</h2>
+                <ul class="list">
+                    <li>Full Stack Web Developer</li>
+                    <li>Github Username: </li>
+                    <li>Contributions: React 2</li>
                 </ul>
+                <div class="button"><a href="">View More Work</a></div>
             </div>
             <div class="box box7"><img class="circle"  src="Images/Tim.png">
             </div>
             <div class="box box9"><img class="circle"  src="Images/rachel.png">
             </div>
             <div class="box box10">
-                <h2>Name Here</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <h2>Rachel Carter</h2>
+                <ul class="list">
+                    <li>Full Stack Web Developer</li>
+                    <li>Github Username: </li>
+                    <li>Contributions: React 1</li>
                 </ul>
+                <div class="button"><a href="">View More Work</a></div>
             </div>
             <div class="box box12">
-                <h2>Name Here</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <h2>Welsey Weidner</h2>
+                <ul class="list">
+                    <li>Full Stack Web Developer</li>
+                    <li>Github Username: </li>
+                    <li>Contributions: React 1</li>
                 </ul>
+                <div class="button"><a href="">View More Work</a></div>
             </div>
             <div class="box box11"><img class="circle" src="Images/welsey.png">
             </div>
             <div class="box box13"><img class="circle"  src="Images/dylan.png">
             </div>
             <div class="box box14">
-                <h2>Name Here</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <h2>Dylan Collins</h2>
+                <ul class="list">
+                    <li>Full Stack Web Developer</li>
+                    <li>Github Username: </li>
+                    <li>Contributions: User Interface</li>
                 </ul>
+                <div class="button"><a href="">View More Work</a></div>
             </div>
-            <div class="box box16"><h2>Name Here</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+            <div class="box box16"><h2>Matthew Castillo</h2>
+                <ul class="list">
+                    <li>Full Stack Web Developer</li>
+                    <li>Github Username: </li>
+                    <li>Contributions: User Interface</li>
                 </ul>
+                <div class="button"><a href="">View More Work</a></div>
             </div>
             <div class="box box15"><img class="circle"  src="Images/Screen Shot 2020-02-03 at 6.22.44 PM.png">
             </div>
         </div>
-    </div>  
+    </div> 
+    <div>
+        <div class="copy">Copyright (c) 2020 Build-Week-Water-My-Plants-2</div>
+    </div>
 
 </body>
 </html>
