finished the second page

--- a/about.html
+++ b/about.html
@@ -32,19 +32,19 @@
                 <h2>Matthew Weidner</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
-                    <li>Github Username: </li>
                     <li>Contributions: Back-end</li>
+                    <li>Github Username: taterntots</li>
                 </ul>
-                <div class="button"><a href="">View More Work</a></div>
+                <div class="button"><a href="https://github.com/taterntots?tab=repositories">View More Work</a></div>
             </div>
             <div class="box box4">
                 <h2>Jesus Morales</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
-                    <li>Github Username: </li>
                     <li>Contributions: Back-end</li>
+                    <li>Github Username: jmjles</li>
                 </ul>
-                <div class="button"><a href="">View More Work</a></div>
+                <div class="button"><a href="https://github.com/jmjles?tab=repositories">View More Work</a></div>
             </div>
             <div class="box box3"><img class="circle"  src="Images/Jesus.png">
             </div>
@@ -54,21 +54,21 @@
                 <h2>Arash Haji-Hassanzadeh</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
-                    <li>Github Username: </li>
                     <li>Contributions: React 2</li>
+                    <li>Github Username: arashhaji</li>
                 </ul>
-                <div class="button"><a href="">View More Work</a></div>
+                <div class="button"><a href="https://github.com/arashhaji?tab=repositories">View More Work</a></div>
             </div>
             <div class="box box8">
                 <h2>Timothy Gilliam</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
-                    <li>Github Username: </li>
                     <li>Contributions: React 2</li>
+                    <li>Github Username: Timgill987</li>
                 </ul>
-                <div class="button"><a href="">View More Work</a></div>
+                <div class="button"><a href="https://github.com/Timgill987?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box7"><img class="circle"  src="Images/Tim.png">
+            <div class="box box7"><img class="circle"  src="Images/Timmy-new.png">
             </div>
             <div class="box box9"><img class="circle"  src="Images/rachel.png">
             </div>
@@ -76,19 +76,19 @@
                 <h2>Rachel Carter</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
-                    <li>Github Username: </li>
                     <li>Contributions: React 1</li>
+                    <li>Github Username: rjcrter11</li>
                 </ul>
-                <div class="button"><a href="">View More Work</a></div>
+                <div class="button"><a href="https://github.com/rjcrter11?tab=repositories">View More Work</a></div>
             </div>
             <div class="box box12">
                 <h2>Welsey Weidner</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
-                    <li>Github Username: </li>
                     <li>Contributions: React 1</li>
+                    <li>Github Username: wesley-ruedebusch</li>
                 </ul>
-                <div class="button"><a href="">View More Work</a></div>
+                <div class="button"><a href="https://github.com/wesley-ruedebusch?tab=repositories">View More Work</a></div>
             </div>
             <div class="box box11"><img class="circle" src="Images/welsey.png">
             </div>
@@ -98,18 +98,18 @@
                 <h2>Dylan Collins</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
-                    <li>Github Username: </li>
                     <li>Contributions: User Interface</li>
+                    <li>Github Username: dylan17th </li>
                 </ul>
-                <div class="button"><a href="">View More Work</a></div>
+                <div class="button"><a href="https://github.com/dylan17th?tab=repositories">View More Work</a></div>
             </div>
             <div class="box box16"><h2>Matthew Castillo</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
-                    <li>Github Username: </li>
                     <li>Contributions: User Interface</li>
+                    <li>Github Username: Blacksheep3y</li>
                 </ul>
-                <div class="button"><a href="">View More Work</a></div>
+                <div class="button"><a href="https://github.com/Blacksheep3y?tab=repositories">View More Work</a></div>
             </div>
             <div class="box box15"><img class="circle"  src="Images/Screen Shot 2020-02-03 at 6.22.44 PM.png">
             </div>
