the second page now has everyone that contributed to the project

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
 <body class="about-page">
     <div class="nav-container">
-        <h1><i class="fab fa-pied-piper-pp"></i> Planet Planners</i></h1>
+        <h1><i class="fas fa-seedling"></i> Planet Planners</i></h1>
         <nav class="flexer">
             <div class="kids"><a href="index.html"><i class="fas fa-home"></i></a></div>
             <div class="kids"><a href=""><i class="fas fa-phone"></i></a></div>
@@ -112,6 +112,39 @@
                 <div class="button"><a href="https://github.com/Blacksheep3y?tab=repositories">View More Work</a></div>
             </div>
             <div class="box box15"><img class="circle"  src="Images/Screen Shot 2020-02-03 at 6.22.44 PM.png">
+            </div>
+            <div class="box box1"><img class="circle"  src="Images/thomas-IOS.png">
+            </div>
+            <div class="box box2">
+                <h2>Thomas Sabino-Benowitz</h2>
+                <ul class="list">
+                    <li>IOS</li>
+                    <li>Contributions: IOS</li>
+                    <li>Github Username: RoastBeefKazenakis</li>
+                </ul>
+                <div class="button"><a href="https://github.com/RoastBeefKazenakis?tab=repositories">View More Work</a></div>
+            </div>
+            <div class="box box4">
+                <h2>Jorge Alvarez</h2>
+                <ul class="list">
+                    <li>IOS</li>
+                    <li>Contributions: IOS</li>
+                    <li>Github Username: alvare52</li>
+                </ul>
+                <div class="button"><a href="https://github.com/alvare52?tab=repositories">View More Work</a></div>
+            </div>
+            <div class="box box3"><img class="circle"  src="Images/alvarez.png">
+            </div>
+            <div class="box box5"><img class="circle"  src="Images/Screen Shot 2020-02-04 at 12.17.55 PM.png">
+            </div>
+            <div class="box box6">
+                <h2>Ira Sanchez</h2>
+                <ul class="list">
+                    <li>Full Stack Web Developer</li>
+                    <li>Contributions: Team Leader</li>
+                    <li>Github Username: irasanchez</li>
+                </ul>
+                <div class="button"><a href="https://github.com/irasanchez?tab=repositories">View More Work</a></div>
             </div>
         </div>
     </div> 
