--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="nav-container">
-        <h1><i class="fab fa-pied-piper-pp"></i> Planet Planners</i></h1>
+        <h1><i class="fas fa-seedling"></i> Planet Planners</i></h1>
         <nav class="flexer">
             <div class="kids"><a href="index.html"><i class="fas fa-home"></i></a></div>
             <div class="kids"><a href=""><i class="fas fa-phone"></i></a></div>
