the mission statement is finished

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <div class='blanket'>
         <div class='mission'>
             <h1>Our Mission</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil in exercitationem, rerum nemo sint corporis amet, doloremque laborum, sit accusamus quisquam nisi natus. Laudantium ab commodi, ducimus officiis non qui reprehenderit cumque natus praesentium, necessitatibus animi in consequuntur! Nulla debitis possimus recusandae libero et quisquam fugiat rem eius quaerat? Accusantium illo ipsa, qui, aperiam, aliquam ipsam itaque architecto eveniet rerum modi pariatur iste sequi maxime sed. Possimus quod culpa illo? Animi earum itaque non quis, minus minima quisquam doloremque culpa, harum eum quas excepturi repellat? Minus quisquam, omnis quas veniam distinctio nulla dicta magnam tempora architecto, nam quaerat totam dolores!</p>
+            <p>Planet Planners is the innovation planets need to continuously flourish. It is our mission to not only help humans keep their floral pets alive, but to thrive. We provide planet owners with visual and audio reminders of when they need to water their planets. Additionally, Planet planners will tell the owner exactly how much water their planets needs based on the type of planet. It is our goal through this technology that planets will no longer die because of human error.</p>
         </div>  
         <div class="container">
             <div class="box box1"><img class="circle"  src="Images/Matthew-w.png">
