--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
             <p>Planet Planners is the innovation planets need to continuously flourish. It is our mission to not only help humans keep their floral pets alive, but to thrive. We provide planet owners with visual and audio reminders of when they need to water their planets. Additionally, Planet planners will tell the owner exactly how much water their planets needs based on the type of planet. It is our goal through this technology that planets will no longer die because of human error.</p>
         </div>  
         <div class="container">
-            <div class="box box1"><img class="circle"  src="Images/Matthew-w.png">
+            <div class="box box1 imagematt"><img class="circle"  src="Images/Matthew-w.png">
             </div>
-            <div class="box box2">
+            <div class="box box2 textmatt">
                 <h2>Matthew Weidner</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -37,7 +37,7 @@
                 </ul>
                 <div class="button"><a href="https://github.com/taterntots?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box4">
+            <div class="box box4 textjesus">
                 <h2>Jesus Morales</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -46,11 +46,11 @@
                 </ul>
                 <div class="button"><a href="https://github.com/jmjles?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box3"><img class="circle"  src="Images/Jesus.png">
+            <div class="box box3 imagejesus"><img class="circle"  src="Images/Jesus.png">
             </div>
-            <div class="box box5"><img class="circle"  src="Images/Arash.png">
+            <div class="box box5 imagearash"><img class="circle"  src="Images/Arash.png">
             </div>
-            <div class="box box6">
+            <div class="box box6 textarash">
                 <h2>Arash Haji-Hassanzadeh</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -59,7 +59,7 @@
                 </ul>
                 <div class="button"><a href="https://github.com/arashhaji?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box8">
+            <div class="box box8 texttim">
                 <h2>Timothy Gilliam</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -68,11 +68,11 @@
                 </ul>
                 <div class="button"><a href="https://github.com/Timgill987?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box7"><img class="circle"  src="Images/Timmy-new.png">
+            <div class="box box7 imagetim"><img class="circle"  src="Images/Timmy-new.png">
             </div>
-            <div class="box box9"><img class="circle"  src="Images/rachel.png">
+            <div class="box box9 image rachel"><img class="circle"  src="Images/rachel.png">
             </div>
-            <div class="box box10">
+            <div class="box box10 textrachel">
                 <h2>Rachel Carter</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -81,7 +81,7 @@
                 </ul>
                 <div class="button"><a href="https://github.com/rjcrter11?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box12">
+            <div class="box box12 textwes">
                 <h2>Welsey Weidner</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -90,11 +90,11 @@
                 </ul>
                 <div class="button"><a href="https://github.com/wesley-ruedebusch?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box11"><img class="circle" src="Images/welsey.png">
+            <div class="box box11imagewes"><img class="circle" src="Images/welsey.png">
             </div>
-            <div class="box box13"><img class="circle"  src="Images/dylan.png">
+            <div class="box box13 imagedylan"><img class="circle"  src="Images/dylan.png">
             </div>
-            <div class="box box14">
+            <div class="box box14 textdylan">
                 <h2>Dylan Collins</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -103,7 +103,7 @@
                 </ul>
                 <div class="button"><a href="https://github.com/dylan17th?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box16"><h2>Matthew Castillo</h2>
+            <div class="box box16 textmattc"><h2>Matthew Castillo</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
                     <li>Contributions: User Interface</li>
@@ -111,11 +111,11 @@
                 </ul>
                 <div class="button"><a href="https://github.com/Blacksheep3y?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box15"><img class="circle"  src="Images/Screen Shot 2020-02-03 at 6.22.44 PM.png">
+            <div class="box box15 imagemattc"><img class="circle"  src="Images/Screen Shot 2020-02-03 at 6.22.44 PM.png">
             </div>
-            <div class="box box1"><img class="circle"  src="Images/thomas-IOS.png">
+            <div class="box box15 imagethomas"><img class="circle"  src="Images/thomas-IOS.png">
             </div>
-            <div class="box box2">
+            <div class="box box16 textthomas">
                 <h2>Thomas Sabino-Benowitz</h2>
                 <ul class="list">
                     <li>IOS</li>
@@ -124,7 +124,7 @@
                 </ul>
                 <div class="button"><a href="https://github.com/RoastBeefKazenakis?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box4">
+            <div class="box box16 textjorge">
                 <h2>Jorge Alvarez</h2>
                 <ul class="list">
                     <li>IOS</li>
@@ -133,11 +133,11 @@
                 </ul>
                 <div class="button"><a href="https://github.com/alvare52?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box3"><img class="circle"  src="Images/alvarez.png">
+            <div class="box box15 imagejorge"><img class="circle"  src="Images/alvarez.png">
             </div>
-            <div class="box box5"><img class="circle"  src="Images/Screen Shot 2020-02-04 at 12.17.55 PM.png">
+            <div class="box box15 imageira"><img class="circle"  src="Images/Screen Shot 2020-02-04 at 12.17.55 PM.png">
             </div>
-            <div class="box box6">
+            <div class="box box16 textira">
                 <h2>Ira Sanchez</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
