finished both pages with media points for mobile

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
     </div>
     <div class="saying">
         <div class="qoute">
-            <div>"Like people, plants respond to extra attention."</div>
+            <div class="displaynone"> <img src="Images/image-planet.png"></div>
+            <div>"Like people, plants respond to extra attention.</div>
             <div class="center">-Arash Haji-Hassanzadeh</div>
         </div>
     </div>
     <div>
-        <div class="copy">Copyright (c) 2020 Build-Week-Water-My-Plants-2</div>
+        <div class="copy copy2">Copyright (c) 2020 Build-Week-Water-My-Plants-2</div>
     </div>
 </body>
 </html>
