--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1><i class="fas fa-seedling"></i> Planet Planners</i></h1>
         <nav class="flexer">
             <div class="kids"><a href="index.html"><i class="fas fa-home"></i></a></div>
-            <div class="kids"><a href=""><i class="fas fa-phone"></i></a></div>
-            <div class="kids"><a href=""><i class="fas fa-envelope"></i></a></div>
+            <div class="kids"><a href="tel:215-588-8859"><i class="fas fa-phone"></i></a></div>
+            <div class="kids"><a href="sms:+215-588-8859"><i class="fas fa-envelope"></i></a></div>
             <div class="kids"><a href=""><i class="fas fa-user"></i></i></a></div>  
             <div class="kids"><a href="about.html"><i class="fas fa-id-badge"></i></i></i></a></div>   
         </nav>
