--- a/about.html
+++ b/about.html
@@ -147,6 +147,17 @@
                 <div class="button"><a href="https://github.com/irasanchez?tab=repositories">View More Work</a>
                 </div>
             </div>
+            <div class="box box16 textjorge">
+                <h2>Rick Moyer</h2>
+                <ul class="list">
+                    <li>IOS</li>
+                    <li>Contributions: IOS</li>
+                    <li>Github Username: RNWolter</li>
+                </ul>
+                <div class="button"><a href="https://github.com/RNWolter?tab=repositories">View More Work</a></div>
+            </div>
+            <div class="box box15 imagejorge"><img class="circle"  src="Images/rick.png">
+            </div>
         </div>
     </div> 
     <div>
