fixed the mobile bug

--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
                 <div class="button"><a href="https://github.com/irasanchez?tab=repositories">View More Work</a>
                 </div>
             </div>
-            <div class="box box16 textjorge">
+            <div class="box box16 textrick">
                 <h2>Rick Moyer</h2>
                 <ul class="list">
                     <li>IOS</li>
@@ -156,7 +156,7 @@
                 </ul>
                 <div class="button"><a href="https://github.com/RNWolter?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box15 imagejorge"><img class="circle"  src="Images/rick.png">
+            <div class="box box15 imagerick"><img class="circle"  src="Images/rick.png">
             </div>
         </div>
     </div> 
