finished my project just waiting on the link, I found the bug

--- a/about.html
+++ b/about.html
@@ -20,15 +20,14 @@
             <div class="kids"><a href="about.html"><i class="fas fa-id-badge"></i></i></i></a></div>   
         </nav>
     </div>
-    <div class='blanket'>
-        <div class='mission'>
+    <section class='blanket'>
+        <section class='mission'>
             <h1>Our Mission</h1>
             <p>Planet Planners is the innovation planets need to continuously flourish. It is our mission to not only help humans keep their floral pets alive, but to thrive. We provide planet owners with visual and audio reminders of when they need to water their planets. Additionally, Planet planners will tell the owner exactly how much water their planets needs based on the type of planet. It is our goal through this technology that planets will no longer die because of human error.</p>
-        </div>  
-        <div class="container">
-            <div class="box box1 imagematt"><img class="circle"  src="Images/Matthew-w.png">
-            </div>
-            <div class="box box2 textmatt">
+        </section>>  
+        <section class="container">
+            <div class="box box1 imagematt"><img class="circle"  src="Images/Matthew-w.png"></div>
+            <section class="box box2 textmatt">
                 <h2>Matthew Weidner</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -36,8 +35,8 @@
                     <li>Github Username: taterntots</li>
                 </ul>
                 <div class="button"><a href="https://github.com/taterntots?tab=repositories">View More Work</a></div>
-            </div>
-            <div class="box box2 textjesus">
+            </section>
+            <section class="box box2 textjesus">
                 <h2>Jesus Morales</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -45,12 +44,10 @@
                     <li>Github Username: jmjles</li>
                 </ul>
                 <div class="button"><a href="https://github.com/jmjles?tab=repositories">View More Work</a></div>
-            </div>
-            <div class="box box1 imagejesus"><img class="circle"  src="Images/Jesus.png">
-            </div>
-            <div class="box box1 imagearash"><img class="circle"  src="Images/Arash.png">
-            </div>
-            <div class="box box2 textarash">
+            </section>
+            <div class="box box1 imagejesus"><img class="circle"  src="Images/Jesus.png"></div>
+            <div class="box box1 imagearash"><img class="circle"  src="Images/Arash.png"></div>
+            <section class="box box2 textarash">
                 <h2>Arash Haji-Hassanzadeh</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -58,8 +55,8 @@
                     <li>Github Username: arashhaji</li>
                 </ul>
                 <div class="button"><a href="https://github.com/arashhaji?tab=repositories">View More Work</a></div>
-            </div>
-            <div class="box box2 texttim">
+            </section>
+            <section class="box box2 texttim">
                 <h2>Timothy Gilliam</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -67,12 +64,10 @@
                     <li>Github Username: Timgill987</li>
                 </ul>
                 <div class="button"><a href="https://github.com/Timgill987?tab=repositories">View More Work</a></div>
-            </div>
-            <div class="box box1 imagetim"><img class="circle"  src="Images/Timmy-new.png">
-            </div>
-            <div class="box box1 imagerachel"><img class="circle"  src="Images/rachel.png">
-            </div>
-            <div class="box box2 textrachel">
+            </section>
+            <div class="box box1 imagetim"><img class="circle"  src="Images/Timmy-new.png"></div>
+            <div class="box box1 imagerachel"><img class="circle"  src="Images/rachel.png"></div>
+            <section class="box box2 textrachel">
                 <h2>Rachel Carter</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -80,7 +75,7 @@
                     <li>Github Username: rjcrter11</li>
                 </ul>
                 <div class="button"><a href="https://github.com/rjcrter11?tab=repositories">View More Work</a></div>
-            </div>
+            </section>
             <div class="box box2 textwes">
                 <h2>Welsey Weidner</h2>
                 <ul class="list">
@@ -90,11 +85,9 @@
                 </ul>
                 <div class="button"><a href="https://github.com/wesley-ruedebusch?tab=repositories">View More Work</a></div>
             </div>
-            <div class="box box1 imagewes"><img class="circle" src="Images/welsey.png">
-            </div>
-            <div class="box box1 imagedylan"><img class="circle"  src="Images/dylan.png">
-            </div>
-            <div class="box box2 textdylan">
+            <div class="box box1 imagewes"><img class="circle" src="Images/welsey.png"></div>
+            <div class="box box1 imagedylan"><img class="circle"  src="Images/dylan.png"></div>
+            <section class="box box2 textdylan">
                 <h2>Dylan Collins</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -102,20 +95,18 @@
                     <li>Github Username: dylan17th </li>
                 </ul>
                 <div class="button"><a href="https://github.com/dylan17th?tab=repositories">View More Work</a></div>
-            </div>
-            <div class="box box2 textmattc"><h2>Matthew Castillo</h2>
+            </section>
+            <section class="box box2 textmattc"><h2>Matthew Castillo</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
                     <li>Contributions: User Interface</li>
                     <li>Github Username: Blacksheep3y</li>
                 </ul>
                 <div class="button"><a href="https://github.com/Blacksheep3y?tab=repositories">View More Work</a></div>
-            </div>
-            <div class="box box1 imagemattc"><img class="circle"  src="Images/Screen Shot 2020-02-03 at 6.22.44 PM.png">
-            </div>
-            <div class="box box1 imagethomas"><img class="circle"  src="Images/thomas-IOS.png">
-            </div>
-            <div class="box box2 textthomas">
+            </section>
+            <div class="box box1 imagemattc"><img class="circle"  src="Images/Screen Shot 2020-02-03 at 6.22.44 PM.png"></div>
+            <div class="box box1 imagethomas"><img class="circle"  src="Images/thomas-IOS.png"></div>
+            <section class="box box2 textthomas">
                 <h2>Thomas Sabino-Benowitz</h2>
                 <ul class="list">
                     <li>IOS</li>
@@ -123,8 +114,8 @@
                     <li>Github Username: RoastBeefKazenakis</li>
                 </ul>
                 <div class="button"><a href="https://github.com/RoastBeefKazenakis?tab=repositories">View More Work</a></div>
-            </div>
-            <div class="box box2 textjorge">
+            </section>
+            <section class="box box2 textjorge">
                 <h2>Jorge Alvarez</h2>
                 <ul class="list">
                     <li>IOS</li>
@@ -132,13 +123,10 @@
                     <li>Github Username: alvare52</li>
                 </ul>
                 <div class="button"><a href="https://github.com/alvare52?tab=repositories">View More Work</a></div>
-            </div>
-            <div class="box box1 imagejorge"><img class="circle"  src="Images/alvarez.png">
-            </div>
-            </div>
-                <div class="box box1 imagerick"><img class="circle"  src="Images/rick.png">
-            </div>
-            <div class="box box2 textrick">
+            </section>
+            <div class="box box1 imagejorge"><img class="circle"  src="Images/alvarez.png"></div>
+            <div class="box box1 imagerick"><img class="circle"  src="Images/rick.png"></div>
+            <section class="box box2 textrick">
                 <h2>Rick Moyer</h2>
                 <ul class="list">
                     <li>IOS</li>
@@ -146,8 +134,8 @@
                     <li>Github Username: RNWolter</li>
                 </ul>
                 <div class="button"><a href="https://github.com/RNWolter?tab=repositories">View More Work</a></div>
-            </div>
-            <div class="box box2 textira">
+            </section>
+            <section class="box box2 textira">
                 <h2>Ira Sanchez</h2>
                 <ul class="list">
                     <li>Full Stack Web Developer</li>
@@ -156,10 +144,9 @@
                 </ul>
                 <div class="button"><a href="https://github.com/irasanchez?tab=repositories">View More Work</a>
                 </div>
-            </div>
-            <div class="box box1 imageira"><img class="circle"  src="Images/Screen Shot 2020-02-04 at 12.17.55 PM.png">
-            </div>
-        </div>
+            </section>
+            <div class="box box1 imageira"><img class="circle"  src="Images/Screen Shot 2020-02-04 at 12.17.55 PM.png"></div>
+        </div>  
     </div> 
     <div>
         <div class="copy">Copyright (c) 2020 Build-Week-Water-My-Plants-2</div>
