--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="kids"><a href="index.html"><i class="fas fa-home"></i></a></div>
             <div class="kids"><a href="tel:215-588-8859"><i class="fas fa-phone"></i></a></div>
             <div class="kids"><a href="sms:+215-588-8859"><i class="fas fa-envelope"></i></a></div>
-            <div class="kids"><a href=""><i class="fas fa-user"></i></i></a></div>  
+            <div class="kids"><a href="https://planetplanner.netlify.com/"><i class="fas fa-user"></i></i></a></div>  
             <div class="kids"><a href="about.html"><i class="fas fa-id-badge"></i></i></i></a></div>   
         </nav>
     </div>
