--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <a href="about.html"><i class="fas fa-users"></i></a>
             <a href="sms:+215-588-8859"><i class="fas fa-envelope"></i></a>
             <a href="tel:215-588-8859"><i class="fas fa-phone"></i></a>
-            <a href="#"><i class="fas fa-user"></i></a>
+            <a href="https://water-plants-r2.now.sh/"><i class="fas fa-user"></i></a>
         </nav>
         <div alt="a photo of a leaf against a whiteish green background." class="header-content-about">
             <h1>Why Choose the Water My Plants Squadron?</h1>
